# tree-sitter-aspcore2

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  grammar.js~  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-aspcore2.pc.in
bindings/c/tree_sitter/: tree-sitter-aspcore2.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_aspcore2/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAspcore2Tests/: TreeSitterAspcore2Tests.swift
src/: grammar.json  node-types.json  parser.c
