[package]
name = "tree-sitter-aspcore2"
description = "A tree-sitter grammar for the ASP-Core-2 input language format for ASP (Aswer Set Programming) systems."
version = "0.1.0"
authors = ["Amadé Nemes <nemesamade@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "aspcore2"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/namcsi/tree-sitter-asp-core-2"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.0"
