[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-aspcore2"
description = "A tree-sitter grammar for the ASP-Core-2 input language format for ASP (Aswer Set Programming) systems."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "aspcore2"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Amadé Nemes", email = "nemesamade@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/namcsi/tree-sitter-aspcore-2"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
